k8s/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
spec:
  ingressClassName: traefik    # l'Ingress controller installé par défaut avec k3s
  rules:
    - host: todo.localhost     # le nom d'hôte qui déclenche cette règle
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  number: 80   # le port du Service, pas celui du conteneur
